# ingame_overlay

./: .gitignore  .gitmodules  Base_Hook.cpp  Base_Hook.h  CMakeLists.txt  Renderer_Detector.cpp  Renderer_Hook.h  image.cpp  image.h  ingameoverlay_imconfig.h  library_main.cpp  utils.cpp  utils.h
.github/workflows/: main.yml
extra/glad2/include/glad/: gl.h
extra/mini_detour/: README.md
extra/mini_detour/include/: mini_detour.h
extra/mini_detour/src/: mini_detour.cpp  mini_detour_x64.h  mini_detour_x86.h
include/InGameOverlay/: RendererDetector.h  RendererHook.h  RendererResource.h
include/ingame_overlay/: Renderer_Detector.h  Renderer_Hook.h
linux/: OpenGLX_Hook.cpp  OpenGLX_Hook.h  X11_Hook.cpp  X11_Hook.h
macosx/: NSView_Hook.cpp  NSView_Hook.h  OpenGL_Hook.cpp  OpenGL_Hook.h  cppNSEvent.h  cppNSEvent.mm  cppNSObject.h  cppNSObject.mm  cppNSView.h  cppNSView.mm  cppObjcTypes.h  objc_wrappers.h  objc_wrappers.mm
src/: BaseHook.cpp  BaseHook.h  Base_Hook.cpp  Base_Hook.h  Internal.cpp  InternalIncludes.h  RendererHookInternal.cpp  RendererHookInternal.h  RendererResourceInternal.cpp  RendererResourceInternal.h  Renderer_Detector.cpp  VulkanHelpers.h  internal_includes.h  mpmc_bounded_queue.h
src/Linux/: OpenGLXHook.cpp  OpenGLXHook.h  RendererDetector.cpp  VulkanHook.cpp  VulkanHook.h  X11Hook.cpp  X11Hook.h
src/MacOSX/: MetalHook.h  MetalHook.mm  Metal_Hook.mm  NSViewHook.h  NSViewHook.mm  NSView_Hook.h  OpenGLHook.h  OpenGLHook.mm  RendererDetector.mm
src/VulkanSDK/include/vulkan/: vk_layer.h  vulkan.cppm  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_profiles.hpp  vulkan_static_assertions.hpp  vulkan_video.hpp
src/Windows/: DX10Hook.cpp  DX10Hook.h  DX11Hook.cpp  DX11Hook.h  DX12Hook.cpp  DX12Hook.h  DX9Hook.cpp  DX9Hook.h  DXVKDetector.h  DirectXVTables.h  OpenGLHook.cpp  OpenGLHook.h  RendererDetector.cpp  SimpleWindowsGamingInput.cpp  SimpleWindowsGamingInput.h  VulkanHook.cpp  VulkanHook.h  WindowsGamingInputVTables.h  WindowsHook.cpp  WindowsHook.h
src/glad2/include/glad/: gl.h
src/linux/: OpenGLXHook.cpp  OpenGLX_Hook.cpp  OpenGLX_Hook.h  RendererDetector.cpp  Renderer_Detector.cpp  X11Hook.cpp  X11Hook.h  X11_Hook.cpp  X11_Hook.h
src/macosx/: Metal_Hook.h  Metal_Hook.mm  NSView_Hook.cpp  NSView_Hook.h  NSView_Hook.mm  OpenGL_Hook.cpp  OpenGL_Hook.h  OpenGL_Hook.mm  Renderer_Detector.mm  objc_metadatas.h  objc_wrappers.h  objc_wrappers.mm
src/vulkan_sdk/include/vulkan/: vulkan.hpp  vulkan_enums.hpp  vulkan_funcs.hpp  vulkan_metal.h  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_to_string.hpp
src/windows/: DX10_Hook.cpp  DX10_Hook.h  DX11_Hook.cpp  DX11_Hook.h  DX12Hook.cpp  DX12_Hook.cpp  DX12_Hook.h  DX9_Hook.cpp  DX9_Hook.h  DirectX_VTables.h  OpenGL_Hook.cpp  OpenGL_Hook.h  Renderer_Detector.cpp  VulkanHook.h  Vulkan_Hook.cpp  Vulkan_Hook.h  WindowsHook.cpp  Windows_Hook.cpp  Windows_Hook.h
tests/common/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_osx.h  imgui_impl_osx.mm  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  ingameoverlay_imconfig.h  right_facing_fist.h  thumbs_down.h  thumbs_down_small.h  thumbs_up.h
tests/common/vulkansdk/include/dxc/: WinAdapter.h
tests/common/vulkansdk/include/shaderc/: shaderc.hpp
tests/common/vulkansdk/include/spirv-headers/: spirv.h  spirv.hpp  spirv.hpp11  spirv.json  spirv.lua  spirv.py
tests/common/vulkansdk/include/spirv_cross/: spirv_common.hpp  spirv_cross.hpp  spirv_cross_c.h  spirv_glsl.hpp  spirv_hlsl.hpp  spirv_msl.hpp
tests/common/vulkansdk/include/vulkan/: vulkan_core.h  vulkan_handles.hpp
tests/dx10/: main.cpp
tests/dx11/: ingameoverlay_imconfig.h  main.cpp
tests/dx12/: main.cpp
tests/dx9/: ingameoverlay_imconfig.h  main.cpp
tests/linux_opengl/: build.sh  imgui.ini  main.cpp
tests/linux_vulkan/: build.sh  main.cpp
tests/macos_metal/: build.sh  imgui_impl_osx.h  imgui_impl_osx.mm  main.mm
tests/macos_opengl2/: build.sh  imgui_impl_osx.mm  ingameoverlay_imconfig.h  main.mm
tests/macos_opengl3/: build.sh  main.mm
tests/overlay_example/: library_main.cpp
tests/test_overlay/: library_main.cpp
tests/windows_opengl3/: main.cpp
tests/windows_shaders_precompile/: dx10_shaders.cpp  dx11_shaders.cpp  dx12_shaders.cpp  dx9_shaders.cpp  main.cpp  shaders.h
tests/windows_vulkan/: imgui_impl_vulkan.h  main.cpp
windows/: DX10_Hook.cpp  DX10_Hook.h  DX11_Hook.cpp  DX11_Hook.h  DX12_Hook.cpp  DX12_Hook.h  DX9_Hook.cpp  DX9_Hook.h  DirectX_VTables.h  OpenGL_Hook.cpp  OpenGL_Hook.h  Vulkan_Hook.cpp  Vulkan_Hook.h  Windows_Hook.cpp  Windows_Hook.h
